user show certificat_url +video_url

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PUBLIC_URL=https://app.novaworkonline.com/admin/
+PUBLIC_URL=https://admin.novaworkonline.com/admin/
 REACT_APP_NAME="Novawork Online Admin"
-REACT_APP_HOST=https://app.novaworkonline.com
+REACT_APP_HOST=https://admin.novaworkonline.com
