--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.7",
+    "react-toast": "^1.0.3",
     "sweetalert2": "^11.7.32",
     "web-vitals": "^2.1.4"
   },
